--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,14 @@
         android:theme="@style/Theme.MediCare"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.Data_Check_Activity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.Register_Activity"
             android:exported="false" />
         <activity
             android:name=".Activity.LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,7 +32,7 @@
             android:exported="false" />
         <activity
             android:name=".Activity.Home_Activity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Activity.Add_Medicine_Activity"
             android:exported="false" />
