--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!-- Add these permissions -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
 
     <application
         android:allowBackup="true"
@@ -12,8 +20,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MediCare"
         tools:targetApi="31">
+        <receiver android:name=".Receiver.AlarmReceiver" />
+
         <activity
-            android:name=".Activity.Data_Check_Activity"
+            android:name=".Activity.AlarmStopActivity"
+            android:exported="false" />
+
+        <receiver android:name=".Receiver.AlarmReceiver" />
+
+        <receiver android:name=".Receiver.MedicineAlarmReceiver" />
+
+        <activity
+            android:name=".Activity.Home_Activity"
             android:exported="false" />
         <activity
             android:name=".Activity.Register_Activity"
@@ -28,17 +46,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity.Intake_Activity"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.Home_Activity"
-            android:exported="false" />
-        <activity
             android:name=".Activity.Add_Medicine_Activity"
+            android:exported="false" /> <!-- Update Receiver declarations -->
+        <receiver
+            android:name=".Activity.AlarmReceiver"
             android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
